# mcq-pipeline

./: .env.example  Makefile  README.md  TIME_TRACKING.md  config.example.yaml  config.yaml  main.py  pyproject.toml  requirements.txt
docs/: concept_and_methodology.mmd  implementation.mmd  methodology_flowchart.drawio
llm_schemas/: evaluation.json  generation.json  generation_two_step_distractors.json  generation_two_step_question.json
prompts/evaluation/: baseline.txt
prompts/generation/: baseline.txt  single_step_baseline.txt  two_step_distractors.txt  two_step_question.txt
prompts/generation/single_step/: chain_of_thought.txt  few_shot.txt  zero_shot.txt
prompts/generation/two_step/: baseline_distractors.txt  chain_of_thought_distractors.txt  chain_of_thought_question.txt  few_shot_distractors.txt  few_shot_question.txt  zero_shot_distractors.txt  zero_shot_question.txt
schemas/: mcq.json
src/: aiken_exporter.py  analyze_mcqs.py  llm_client.py  mcqs_evaluator.py  mcqs_exporter.py  mcqs_generator.py  mcqs_reviewer.py  models.py  moodle_exporter.py  pdf_extractor.py
